re PR c++/34950 (ICE in svn boost math toolkit)

PR c++/34950
        * pt.c (resolve_overloaded_unification): Set processing_template_decl
        while we look for possible bindings.

From-SVN: r132456